Trying to correct background images not staying fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,11 @@ body {
 }
 
 .intro-2 {    
-    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.5)), url("../assets/images/reflections5-hero.jpg") no-repeat center center;
+    background: linear-gradient(rgba(20,20,20,0.3), rgba(20,20,20,0.5)), url("../assets/images/reflections5-hero.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-attachment: fixed;
     position: relative;
 }
 
